[package]
name = "irohping"
version = "0.1.0"
edition = "2021"

[dependencies]
iroh = "0.28.1"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.93"
clap = { version = "4.5.20", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
futures-lite = "2.5.0"
